--- a/Bulgogi/style.css
+++ b/Bulgogi/style.css
@@ -85,8 +85,8 @@ button{
 }
 
 .box2{
-    position: absolute;
-    top: 20%;
+    position: fixed;
+    top: 10%;
     left: 50%;
     width: 500px;
     transform: translate(-50%, -50%) scale(1);
@@ -94,8 +94,8 @@ button{
 }
 
 .box{
-    position: absolute;
-    top: 45%;
+    position: fixed;
+    top: 50%;
     left: 50%;
     width: 500px;
     transform: translate(-50%, -50%) scale(1);
