--- a/Bulgogi/style.css
+++ b/Bulgogi/style.css
@@ -96,6 +96,7 @@ button{
 .box{
     position: fixed;
     top: 50%;
+    top: 45%;
     left: 50%;
     width: 500px;
     transform: translate(-50%, -50%) scale(1);
